Project beauty_center_v2 {
  database_type: 'PostgreSQL'
  Note: 'V2 extends the single-tenant V1 operational schema with back-office identities, RBAC, opaque API sessions, audit records, and an optional laser-area extension.'
}

Table service_categories {
  id bigint [pk, increment]
  uuid uuid [not null, unique, default: `gen_random_uuid()`]
  name varchar(100) [not null, unique]
  is_active boolean [not null, default: true]
  created_at timestamptz
  updated_at timestamptz
}

Table services {
  id bigint [pk, increment]
  uuid uuid [not null, unique, default: `gen_random_uuid()`]
  service_category_id bigint [not null]
  name varchar(150) [not null]
  description text
  price numeric(12,2) [not null, note: 'CHECK price >= 0']
  duration_minutes smallint [not null, note: 'CHECK duration_minutes > 0']
  is_active boolean [not null, default: true]
  created_at timestamptz
  updated_at timestamptz
  Indexes { (service_category_id, name) [name: 'services_active_category_name_idx', note: 'WHERE is_active = true'] }
}

Table employees {
  id bigint [pk, increment]
  uuid uuid [not null, unique, default: `gen_random_uuid()`]
  full_name varchar(150) [not null]
  email varchar(255) [unique]
  phone varchar(30) [unique]
  commission_rate numeric(5,2) [not null, default: 0]
  is_active boolean [not null, default: true]
  created_at timestamptz
  updated_at timestamptz
  deleted_at timestamptz
}

Table employee_services {
  employee_id bigint [not null]
  service_id bigint [not null]
  created_at timestamptz
  updated_at timestamptz
  Indexes { (employee_id, service_id) [pk] }
}

Table employee_working_hours {
  id bigint [pk, increment]
  uuid uuid [not null, unique, default: `gen_random_uuid()`]
  employee_id bigint [not null]
  weekday smallint [not null, note: 'CHECK weekday BETWEEN 0 AND 6']
  start_time time [not null]
  end_time time [not null, note: 'CHECK start_time < end_time']
  created_at timestamptz
  updated_at timestamptz
  Indexes { (employee_id, weekday, start_time, end_time) [unique] }
}

Table employee_unavailability {
  id bigint [pk, increment]
  uuid uuid [not null, unique, default: `gen_random_uuid()`]
  employee_id bigint [not null]
  start_at timestamptz [not null]
  end_at timestamptz [not null]
  reason varchar(30) [not null]
  notes text
  created_at timestamptz
  updated_at timestamptz
}

Table customers {
  id bigint [pk, increment]
  uuid uuid [not null, unique, default: `gen_random_uuid()`]
  full_name varchar(150) [not null]
  phone varchar(30) [not null, unique]
  email varchar(255) [unique]
  address text
  loyalty_points int [not null, default: 0]
  registered_at timestamptz [not null]
  created_at timestamptz
  updated_at timestamptz
  deleted_at timestamptz
}

Table appointments {
  id bigint [pk, increment]
  uuid uuid [not null, unique, default: `gen_random_uuid()`]
  customer_id bigint [not null]
  employee_id bigint [not null]
  start_at timestamptz [not null]
  end_at timestamptz [not null]
  status varchar(20) [not null]
  notes text
  created_at timestamptz
  updated_at timestamptz
  Note: 'Active pending/confirmed rows are protected by the V1 employee-overlap exclusion constraint.'
}

Table appointment_services {
  id bigint [not null, unique, increment, note: 'Additive V3 reference key; V1 composite primary key remains authoritative.']
  appointment_id bigint [not null]
  service_id bigint [not null]
  booked_price numeric(12,2) [not null]
  booked_duration_minutes smallint [not null]
  position smallint [not null, default: 1]
  created_at timestamptz
  updated_at timestamptz
  Indexes { (appointment_id, service_id) [pk] }
}

Table laser_areas {
  id bigint [pk, increment]
  uuid uuid [not null, unique, default: `gen_random_uuid()`]
  code varchar(100) [not null, unique]
  name varchar(150) [not null]
  sort_order smallint [not null, default: 1, note: 'CHECK sort_order > 0']
  is_active boolean [not null, default: true]
  created_at timestamptz
  updated_at timestamptz
  Note: 'Global catalogue rows, e.g. full_body; they are not boolean columns on services or appointments.'
}

Table laser_service_settings {
  id bigint [pk, increment]
  service_id bigint [not null, unique]
  created_at timestamptz
  updated_at timestamptz
  Note: 'Its presence opts a service into laser configuration.'
}

Table laser_service_areas {
  id bigint [pk, increment]
  laser_service_setting_id bigint [not null]
  laser_area_id bigint [not null]
  default_price numeric(12,2) [note: 'CHECK NULL OR >= 0']
  default_duration_minutes smallint [note: 'CHECK NULL OR > 0']
  is_active boolean [not null, default: true]
  created_at timestamptz
  updated_at timestamptz
  Indexes { (laser_service_setting_id, laser_area_id) [unique, name: 'laser_service_areas_setting_area_unique'] }
}

Table appointment_service_laser_areas {
  id bigint [pk, increment]
  appointment_service_id bigint [not null]
  laser_service_area_id bigint [not null]
  performed_by_employee_id bigint
  status varchar(20) [not null, default: 'planned', note: 'CHECK planned | completed | skipped']
  area_name_snapshot varchar(150) [not null]
  price_snapshot numeric(12,2) [note: 'CHECK NULL OR >= 0']
  duration_snapshot_minutes smallint [note: 'CHECK NULL OR > 0']
  notes text
  created_at timestamptz
  updated_at timestamptz
  Indexes {
    (appointment_service_id, laser_service_area_id) [unique, name: 'appointment_service_laser_areas_appointment_service_area_unique']
    performed_by_employee_id [name: 'appointment_service_laser_areas_performed_by_employee_idx']
  }
  Note: 'The laser execution chain is appointment -> appointment_services -> this table. Client follows the existing appointment customer relation; no duplicate customer, user, or appointment reference is stored.'
}

Table roles {
  id bigint [pk, increment]
  name varchar(100) [not null]
  slug varchar(100) [not null, unique]
  description text
  created_at timestamptz
  updated_at timestamptz
}

Table permissions {
  id bigint [pk, increment]
  code varchar(100) [not null, unique]
  name varchar(150) [not null]
  description text
  created_at timestamptz
  updated_at timestamptz
}

Table role_permissions {
  role_id bigint [not null]
  permission_id bigint [not null]
  created_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  Indexes { (role_id, permission_id) [pk] }
}

Table users {
  id bigint [pk, increment]
  role_id bigint [not null]
  employee_id bigint [unique]
  name varchar(150) [not null]
  email varchar(255) [not null, unique]
  password varchar(255) [not null, note: 'Laravel-standard password hash only']
  is_active boolean [not null, default: true]
  last_login_at timestamptz
  created_at timestamptz
  updated_at timestamptz
}

Table auth_sessions {
  id bigint [pk, increment]
  user_id bigint [not null]
  token_hash char(64) [not null, unique, note: 'SHA-256 of the opaque raw token; raw token is never stored']
  device_name varchar(150)
  expires_at timestamptz [not null]
  last_used_at timestamptz
  revoked_at timestamptz
  ip_hash char(64)
  user_agent_hash char(64)
  created_at timestamptz
  updated_at timestamptz
  Indexes { (user_id, revoked_at, expires_at) [name: 'auth_sessions_user_revoked_expires_idx'] }
}

Table audit_logs {
  id bigint [pk, increment]
  actor_user_id bigint
  actor_type varchar(20) [not null, default: 'user', note: 'CHECK user | system']
  action varchar(100) [not null]
  entity_type varchar(100)
  entity_id bigint
  entity_uuid uuid
  result varchar(20) [not null, default: 'success', note: 'CHECK success | denied | failed']
  reason varchar(255)
  old_values jsonb
  new_values jsonb
  request_id uuid
  ip_hash char(64)
  created_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  Indexes {
    (entity_type, entity_id, created_at) [name: 'audit_logs_entity_created_idx']
    (actor_user_id, created_at) [name: 'audit_logs_actor_created_idx']
  }
}

Ref: services.service_category_id > service_categories.id [delete: restrict]
Ref: employee_services.employee_id > employees.id [delete: cascade]
Ref: employee_services.service_id > services.id [delete: cascade]
Ref: employee_working_hours.employee_id > employees.id [delete: cascade]
Ref: employee_unavailability.employee_id > employees.id [delete: cascade]
Ref: appointments.customer_id > customers.id [delete: restrict]
Ref: appointments.employee_id > employees.id [delete: restrict]
Ref: appointment_services.appointment_id > appointments.id [delete: cascade]
Ref: appointment_services.service_id > services.id [delete: restrict]
Ref: laser_service_settings.service_id > services.id [delete: restrict]
Ref: laser_service_areas.laser_service_setting_id > laser_service_settings.id [delete: restrict]
Ref: laser_service_areas.laser_area_id > laser_areas.id [delete: restrict]
Ref: appointment_service_laser_areas.appointment_service_id > appointment_services.id [delete: cascade]
Ref: appointment_service_laser_areas.laser_service_area_id > laser_service_areas.id [delete: restrict]
Ref: appointment_service_laser_areas.performed_by_employee_id > employees.id [delete: restrict]
Ref: role_permissions.role_id > roles.id [delete: restrict]
Ref: role_permissions.permission_id > permissions.id [delete: restrict]
Ref: users.role_id > roles.id [delete: restrict]
Ref: users.employee_id > employees.id [delete: set null]
Ref: auth_sessions.user_id > users.id [delete: restrict]
Ref: audit_logs.actor_user_id > users.id [delete: set null]
